infra/kubernetes/crawler/app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: crawler
    component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: app
  template:
    metadata:
      name: app-pod
      labels:
        app: crawler
        component: app
    spec:
      containers:
      - image: noirgt/crawler-app
        name: app
