infra/kubernetes/crawler/app-mongo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-app-db
  labels:
    app: crawler
    component: mongo
    crawler-app-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: crawler
    component: mongo
    crawler-app-db: "true"
