infra/kubernetes/crawler/app-rabbitmq-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-mq
  labels:
    app: crawler
    component: rabbitmq
    crawler-mq: "true"
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: crawler
    component: rabbitmq
    crawler-mq: "true"
