infra/kubernetes/crawler/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: crawler
    component: app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: crawler
    component: app
