infra/kubernetes/crawler/ui-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: crawler
    component: ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    nodePort: 32095
    protocol: TCP
    targetPort: 8000
  selector:
    app: crawler
    component: ui
