infra/kubernetes/crawler/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - ui.doublespace.ru
      - grafana.doublespace.ru
      - prometheus.doublespace.ru
      secretName: letsencrypt
  rules:
    - host: ui.doublespace.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 8000
    - host: grafana.doublespace.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stable-grafana
              port:
                number: 80
    - host: prometheus.doublespace.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stable-kube-prometheus-sta-prometheus
              port:
                number: 9090
